# docs/swagger/paths/contacts/index.yaml
@@ -36,23 +36,32 @@ get:
                 example: 200
               message:
                 type: string
-                example: "Successfully retrieved contacts!"
+                example: "Successfully found contacts!"
               data:
                 type: object
                 properties:
-                  contacts:
+                  data:
                     type: array
                     items:
                       $ref: '../../components/schemas/Contact.yaml'
-                  total:
-                    type: integer
-                    description: Загальна кількість контактів
                   page:
                     type: integer
                     description: Поточна сторінка
-                  limit:
+                  perPage:
                     type: integer
                     description: Кількість контактів на сторінці
+                  totalItems:
+                    type: integer
+                    description: Загальна кількість контактів
+                  totalPages:
+                    type: integer
+                    description: Загальна кількість сторінок
+                  hasPreviousPage:
+                    type: boolean
+                    description: Чи є попередня сторінка
+                  hasNextPage:
+                    type: boolean
+                    description: Чи є наступна сторінка
     '401':
       description: Не авторизований
       content:
@@ -70,7 +79,7 @@ post:
   requestBody:
     required: true
     content:
-      application/json:
+      multipart/form-data:
         schema:
           type: object
           required:
@@ -81,6 +90,8 @@ post:
             name:
               type: string
               description: Ім'я контакту
+              minLength: 3
+              maxLength: 20
             email:
               type: string
               format: email
@@ -88,17 +99,32 @@ post:
             phone:
               type: string
               description: Номер телефону контакту
+              minLength: 3
+              maxLength: 20
             favorite:
               type: boolean
               default: false
               description: Чи є контакт улюбленим
+            photo:
+              type: string
+              format: binary
+              description: Фото контакту
   responses:
     '201':
       description: Контакт створено
       content:
         application/json:
           schema:
-            $ref: '../../components/schemas/Contact.yaml'
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 201
+              message:
+                type: string
+                example: "Successfully created a contact!"
+              data:
+                $ref: '../../components/schemas/Contact.yaml'
     '400':
       description: Невалідні дані
       content:
