# src/validation/contacts.ts
@@ -1,6 +1,6 @@
 import Joi from 'joi';
-import { ContactRequest, UpdateContactRequest } from '../types/models.ts';
-import { typeList } from '../constants/contacts.ts';
+import { ContactRequest, UpdateContactRequest } from '../types/models';
+import { typeList } from '../constants/contacts';
 
 const photoSchema = Joi.object({
   secure_url: Joi.string().required(),
@@ -8,18 +8,18 @@ const photoSchema = Joi.object({
 });
 
 export const contactSchema = Joi.object<ContactRequest>({
-  name: Joi.string().required(),
+  name: Joi.string().min(3).max(20).required(),
   email: Joi.string().email().required(),
-  phone: Joi.string().required(),
+  phone: Joi.string().min(3).max(20).required(),
   favorite: Joi.boolean(),
   contactType: Joi.string().valid(...typeList),
   photo: photoSchema,
 });
 
 export const updateContactSchema = Joi.object<UpdateContactRequest>({
-  name: Joi.string(),
+  name: Joi.string().min(3).max(20),
   email: Joi.string().email(),
-  phone: Joi.string(),
+  phone: Joi.string().min(3).max(20),
   favorite: Joi.boolean(),
   contactType: Joi.string().valid(...typeList),
   photo: photoSchema,
